refactor: extract shared models to common module